--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
 </head>
 <body class="background">
 <div class="text">K93MSY</div>
-<div>
-    <button onclick="btgithub()" style="animation: fadeIn 4s,fadeIn3 4s;background-color:#ffffff;border-radius:200%;top:53%;left:50%;position:absolute;border-width:0px">
-        <i id="id" class="fab fa-github" style="font-size:500%;"></i>
+<div style="margin:0 auto;display:table;">
+    <button onclick="btgithub()" style="animation: fadeIn 4s,fadeIn3 4s;background-color:#ffffff;border-radius:200%;top:53%;position:absolute;border-width:0px">
+        <i id="id" class="fab fa-github" style="font-size:500%;color:#000000;"></i>
     </button>
-    <button onclick="btdocument()" style="animation: fadeIn 4s,fadeIn3 4s;top:53%;left:65%;margin-left:10%;position:absolute;border-width:0px">
-        <i id="id2" class="fas fa-file" style="font-size:500%; margin:2%;"></i>
+    <button onclick="btdocument()" style="animation: fadeIn 4s,fadeIn3 4s;top:53%;margin:0 30%;position:absolute;border-width:0px">
+        <i id="id2" class="fas fa-file" style="font-size:500%; margin:2%;color:#000000;"></i>
     </button>
-    <button onclick="btmusic()" style="animation: fadeIn 4s,fadeIn3 4s;top:53%;right:60%;margin-right:10%;position:absolute;border-width:0px">
-        <i id="id3" class="fas fa-music" style="font-size:500%; margin:2%;"></i>
+    <button onclick="btmusic()" style="animation: fadeIn 4s,fadeIn3 4s;top:53%;margin:0 -30%;position:absolute;border-width:0px">
+        <i id="id3" class="fas fa-music" style="font-size:500%; margin:2%;color:#000000;"></i>
     </button>
+</div>
+<div id="document">
+
 </div>
 </body>
 </html>
