--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>K93MSY</title>
+    <title>excv4</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="script.js"></script>
     <link rel="icon" href="favicon.ico">
@@ -18,7 +18,7 @@
     </script>
 </head>
 <body class="background">
-<div class="text">K93MSY</div>
+<div class="text">excv4.Net</div>
 <div style="margin:0 auto;display:table;">
     <button onclick="btgithub()" style="animation: fadeIn 4s,fadeIn3 4s;background-color:#ffffff;border-radius:200%;top:53%;position:absolute;border-width:0px">
         <i id="id" class="fab fa-github" style="font-size:500%;color:#000000;"></i>
