--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
         <a href="https://github.com/K93MSY/"><button class="btn-a">GitHub</button></a>
         <a href="https://discord.gg/SS8RBBhUEc"><button class="btn-b">Discord</button></a>
     </div>
-</body>
+<br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+<\body>
 </html>
