--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         <a href="https://github.com/K93MSY/"><button class="btn-a">GitHub</button></a>
         <a href="https://discord.gg/SS8RBBhUEc"><button class="btn-b">Discord</button></a>
     </div>
-<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
 
-<br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-
-<\body>
+</body>
 </html>
