--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <a href="https://github.com/K93MSY/"><button class="btn-a">GitHub</button></a>
         <a href="https://discord.gg/SS8RBBhUEc"><button class="btn-b">Discord</button></a>
     </div>
-    <a style="display:block;margin-top:3000px;">　</a>
+    <a style="display:block;margin-top:30px;">　</a>
+    <h1>Hi There!!!</h1>
+    <h4>I'm  a student learning information:)</h4>
 
 </body>
 </html>
