--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="main">
         <a href="https://github.com/K93MSY/"><button class="btn-a">GitHub</button></a>
-        <a href="https://discord.gg/SS8RBBhUEc"><button class="btn-b">Discord</button></a>
+        <!--<a href="https://discord.gg/SS8RBBhUEc"><button class="btn-b">Discord</button></a>-->
     </div>
     <a style="display:block;margin-top:30px;">　</a>
     <h1>Hi There!!!</h1>
